Well, any padding at all breaks the page.  I can fix it with flexbox, but that probably breaks the rules? I dunno, I reverted it anyway.

--- a/stylesheets/cli-quiz.css
+++ b/stylesheets/cli-quiz.css
@@ -13,7 +13,6 @@ section {
 .content {
 	float: left;
 	width: 65%;
-	padding: 10px;
 	background-color: darkslategray;
 	color: white;
 }
@@ -21,7 +20,6 @@ section {
 .sidebar {
 	float: right;
 	width: 30%;
-	padding: 10px;
 	background-color: slategray;
 }
 
